addd /dahboard endpoint
